--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-language: python
+os: osx
+language: shell
 python:
-  - "2.7"
+  - "2.7-dev"
 install:
   - pip install -r requirements.txt
 script:
-  - python app
+  - python app.py
