--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 altgraph==0.10.2
 bdist-mpkg==0.5.0
-bonjour-py==0.3
 macholib==1.5.1
 matplotlib==1.3.1
 modulegraph==0.10.4
-numpy==1.8.0rc1
+numpy==1.8.0r
 py2app==0.7.3
 pyobjc-core==2.5.1
 pyobjc-framework-Accounts==2.5.1
@@ -45,7 +44,7 @@ pyOpenSSL==17.5.0
 pyparsing==2.0.1
 python-dateutil==1.5
 pytz==2013.7
-scipy==0.13.0b1
+scipy==0.13.0
 six==1.4.1
 virtualenv==16.7.5
 xattr==0.6.4
