--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ bdist-mpkg==0.5.0
 macholib==1.5.1
 matplotlib==1.3.1
 modulegraph==0.10.4
-numpy==1.8.0r
+numpy==1.8.0
 py2app==0.7.3
 pyobjc-core==2.5.1
 pyobjc-framework-Accounts==2.5.1
