--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ language: shell
 python:
   - "2.7-dev"
 install:
-  - pip install -r requirements.txt
+  - pip install -r requirements-travis.txt
 script:
   - python app.py
