--- a/requirements-travis.txt
+++ b/requirements-travis.txt
@@ -6,6 +6,7 @@ modulegraph==0.10.4
 # numpy==1.8.0
 py2app==0.7.3
 pyobjc-core==2.5.1
+pyobjc-framework-AddressBook==2.5.1
 pyobjc==2.5.1
 pyOpenSSL==17.5.0
 pyparsing==2.0.1
