--- a/requirements-travis.txt
+++ b/requirements-travis.txt
@@ -1,3 +1,4 @@
+Flask
 altgraph==0.10.2
 bdist-mpkg==0.5.0
 macholib==1.5.1
@@ -5,8 +6,6 @@ matplotlib==1.3.1
 modulegraph==0.10.4
 # numpy==1.8.0
 py2app==0.7.3
-pyobjc-core==2.5.1
-pyobjc-framework-AddressBook==2.5.1
 pyobjc==2.5.1
 pyOpenSSL==17.5.0
 pyparsing==2.0.1
